# Main-CI-Template

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: MainCI.yml
src/: main.rs
