[package]
name = "Main-CI-Template"
version = "0.1.0"
authors = ["MATRIXKOO <matrixkook@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.riscv64gc-unknown-linux-gnu]
linker = "riscv64-unknown-elf-gcc"
ar = "riscv64-unknown-elf-ar"